<resources>
    <string name="app_name">Baldurs Guide To Gatekeeping</string>
    <string name="astarion_supremacy">WELCOME TO THE BALDURS GUIDE</string>
    <string name="characters">Characters</string>
    <string name="spells">Spells</string>
    <string name="weapons">Weapons</string>
    <string name="schedule">Schedule</string>
    <string name="new_quest">New Quest</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="primary">Primary</string>
    <string name="pick_date">Pick Date</string>
    <string name="title_activity_character_overview">CharacterOverview</string>
    <string name="speak">Speak</string>
    <string name="close">Close</string>
    <string name="add_character">Add Character</string>
    <string name="todo">TODO</string>
    <string name="race">Race</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="add_spell">Add Spell</string>
</resources>