<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:text="@string/astarion_supremacy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/weaponMenuBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weapons"
            app:layout_constraintBottom_toTopOf="@+id/spellMenuBtn"
            app:layout_constraintEnd_toEndOf="@+id/characterMenuBtn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/characterMenuBtn"
            app:layout_constraintTop_toBottomOf="@+id/characterMenuBtn"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/characterMenuBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/characters"
            app:layout_constraintBottom_toTopOf="@+id/weaponMenuBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appTitle"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/spellMenuBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/spells"
            app:layout_constraintBottom_toTopOf="@+id/scheduleBtn"
            app:layout_constraintEnd_toEndOf="@+id/weaponMenuBtn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/weaponMenuBtn"
            app:layout_constraintTop_toBottomOf="@+id/weaponMenuBtn"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/scheduleBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/schedule"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/spellMenuBtn"
            app:layout_constraintStart_toStartOf="@+id/spellMenuBtn"
            tools:ignore="VisualLintButtonSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>